// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for Trubrics's track destination action: all fields 1`] = `
Object {
  "event": "a8sh%]V89rmzO",
  "properties": Object {
    "testType": "a8sh%]V89rmzO",
  },
  "timestamp": "2024-07-26T05:06:53.998Z",
  "traits": Object {
    "testType": "a8sh%]V89rmzO",
  },
  "user_id": "a8sh%]V89rmzO",
}
`;

exports[`Testing snapshot for Trubrics's track destination action: required fields 1`] = `
Object {
  "event": "a8sh%]V89rmzO",
  "properties": Object {},
  "timestamp": "2024-07-26T05:06:53.998Z",
  "user_id": "a8sh%]V89rmzO",
}
`;
